
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


typedef scalar_t__ ulong ;
typedef int uchar ;
struct TYPE_2__ {scalar_t__ base; scalar_t__ ceiling; } ;


 int False ;
 int OREAD ;
 int True ;
 int abort () ;
 int * calloc (int,int ) ;
 int err (char*,...) ;
 int msg (char*,char*) ;
 int open (char*,int ) ;
 int outfd ;
 int pagesz ;
 long pread (int,int *,int ,scalar_t__) ;
 TYPE_1__* seg ;
 int write (int ,int *,long) ;

__attribute__((used)) static int
stealfile(char * path)
{
 uchar * page;
 ulong addr;
 long n;
 int fd;

 msg("opening \"%s\" for imaging", path);

 fd = open(path, OREAD);
 if(fd < 0)
 {
  err("can't open \"%s\": %r", path);
  return False;
 }

 page = calloc(1, pagesz);
 if(!page)
 {
  err("calloc failed: %r");
  abort();
 }

 addr = seg->base;

 while(addr < seg->ceiling)
 {
  n = pread(fd, page, pagesz, addr);
  if(n <= 0)
  {
   if(n < 0)
    err("read on \"%s\" failed: %r", path);
   break;
  }

  write(outfd, page, n);
  addr += n;
 }

 return True;
}
