; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/plan9/local/extr_3383.c_stealfile.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/plan9/local/extr_3383.c_stealfile.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64, i64 }

@.str = private unnamed_addr constant [25 x i8] c"opening \22%s\22 for imaging\00", align 1
@OREAD = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [20 x i8] c"can't open \22%s\22: %r\00", align 1
@False = common dso_local global i32 0, align 4
@pagesz = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [18 x i8] c"calloc failed: %r\00", align 1
@seg = common dso_local global %struct.TYPE_2__* null, align 8
@.str.3 = private unnamed_addr constant [24 x i8] c"read on \22%s\22 failed: %r\00", align 1
@outfd = common dso_local global i32 0, align 4
@True = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @stealfile to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @stealfile(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  %8 = load i8*, i8** %3, align 8
  %9 = call i32 @msg(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0), i8* %8)
  %10 = load i8*, i8** %3, align 8
  %11 = load i32, i32* @OREAD, align 4
  %12 = call i32 @open(i8* %10, i32 %11)
  store i32 %12, i32* %7, align 4
  %13 = load i32, i32* %7, align 4
  %14 = icmp slt i32 %13, 0
  br i1 %14, label %15, label %19

15:                                               ; preds = %1
  %16 = load i8*, i8** %3, align 8
  %17 = call i32 (i8*, ...) @err(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.1, i64 0, i64 0), i8* %16)
  %18 = load i32, i32* @False, align 4
  store i32 %18, i32* %2, align 4
  br label %62

19:                                               ; preds = %1
  %20 = load i32, i32* @pagesz, align 4
  %21 = call i32* @calloc(i32 1, i32 %20)
  store i32* %21, i32** %4, align 8
  %22 = load i32*, i32** %4, align 8
  %23 = icmp ne i32* %22, null
  br i1 %23, label %27, label %24

24:                                               ; preds = %19
  %25 = call i32 (i8*, ...) @err(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.2, i64 0, i64 0))
  %26 = call i32 (...) @abort() #3
  unreachable

27:                                               ; preds = %19
  %28 = load %struct.TYPE_2__*, %struct.TYPE_2__** @seg, align 8
  %29 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %28, i32 0, i32 0
  %30 = load i64, i64* %29, align 8
  store i64 %30, i64* %5, align 8
  br label %31

31:                                               ; preds = %52, %27
  %32 = load i64, i64* %5, align 8
  %33 = load %struct.TYPE_2__*, %struct.TYPE_2__** @seg, align 8
  %34 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %33, i32 0, i32 1
  %35 = load i64, i64* %34, align 8
  %36 = icmp slt i64 %32, %35
  br i1 %36, label %37, label %60

37:                                               ; preds = %31
  %38 = load i32, i32* %7, align 4
  %39 = load i32*, i32** %4, align 8
  %40 = load i32, i32* @pagesz, align 4
  %41 = load i64, i64* %5, align 8
  %42 = call i64 @pread(i32 %38, i32* %39, i32 %40, i64 %41)
  store i64 %42, i64* %6, align 8
  %43 = load i64, i64* %6, align 8
  %44 = icmp sle i64 %43, 0
  br i1 %44, label %45, label %52

45:                                               ; preds = %37
  %46 = load i64, i64* %6, align 8
  %47 = icmp slt i64 %46, 0
  br i1 %47, label %48, label %51

48:                                               ; preds = %45
  %49 = load i8*, i8** %3, align 8
  %50 = call i32 (i8*, ...) @err(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.3, i64 0, i64 0), i8* %49)
  br label %51

51:                                               ; preds = %48, %45
  br label %60

52:                                               ; preds = %37
  %53 = load i32, i32* @outfd, align 4
  %54 = load i32*, i32** %4, align 8
  %55 = load i64, i64* %6, align 8
  %56 = call i32 @write(i32 %53, i32* %54, i64 %55)
  %57 = load i64, i64* %6, align 8
  %58 = load i64, i64* %5, align 8
  %59 = add nsw i64 %58, %57
  store i64 %59, i64* %5, align 8
  br label %31

60:                                               ; preds = %51, %31
  %61 = load i32, i32* @True, align 4
  store i32 %61, i32* %2, align 4
  br label %62

62:                                               ; preds = %60, %15
  %63 = load i32, i32* %2, align 4
  ret i32 %63
}

declare dso_local i32 @msg(i8*, i8*) #1

declare dso_local i32 @open(i8*, i32) #1

declare dso_local i32 @err(i8*, ...) #1

declare dso_local i32* @calloc(i32, i32) #1

; Function Attrs: noreturn
declare dso_local i32 @abort(...) #2

declare dso_local i64 @pread(i32, i32*, i32, i64) #1

declare dso_local i32 @write(i32, i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
